test/types/sync/ferguson/non-nilable-sync-error.good
non-nilable-sync-error.chpl:2: error: sync/single types cannot yet contain non-nilable classes
