test/types/sync/ferguson/non-nilable-sync-error.chpl
class MyClass { var x: int; }
var x: sync unmanaged MyClass;
